Filter forecasted stream by id
