# docs/swagger.json
@@ -919,6 +919,14 @@
                         "name": "calibrado_id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "format": "string",
+                        "description": "Id de la serie",
+                        "name": "serieId",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
